fix firefox menu overflow

--- a/src/robot/htmldata/libdoc/libdoc.css
+++ b/src/robot/htmldata/libdoc/libdoc.css
@@ -170,6 +170,7 @@ input.hamburger-menu:checked ~ span.hamburger-menu-3
     display: flex;
     flex-direction: column;
     height: 0;
+    max-height: calc(100vh - 80px - 0.5rem);
     flex: 1;
     border: 1px solid #e0e0e2;
     border-radius: 3px;
